[package]
name = "waspbridge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "companion application for wasp-os"
repository = "https://github.com/MrPicklePinosaur/waspbridge"

[features]

[dependencies]
rexpect = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
signal-hook = "0.3.14"

log = { version = "0.4" }
env_logger = { version = "0.9" }
